[package]
name = "powddos"
version = "0.1.0"
authors = ["igor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1"
rand = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crypto = "0.3"
byteorder = "1"
md5 = "0.7"
lazy_static = "1"
